--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </ul>
     <h2>Discover More</h2>
     <figure>
-        <img src="grand canyon.jpeg" alt=A breathtaking view of the Grand Canyon" title="Grand Canyon" width="300"
+        <img src="Grand Canyon.jpeg" alt=A breathtaking view of the Grand Canyon" title="Grand Canyon" width="300"
             height="200">
         <figcaption>The Majestic Grand Canyon</figcaption>
     </figure>
