--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Eeploring Natural Wonders</h1>
+    <h1>Exploring Natural Wonders</h1>
     <p>Discover the awe-inspiring beauty of landscapes across the globe, from the <strong>Victoria Falls</strong> in
         Zimbabwe to the captivating <strong>Aurora Borealis</strong> visible in various countries.</p>
     <h2>Natural Wonders</h2>
